k8/springgreeting2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springgreeting-v2
  labels:
    app: springgreeting
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springgreeting
      version: canary
  template:
    metadata:
      labels:
        app: springgreeting
        version: canary
    spec:
      serviceAccountName: springgreeting-v2
      containers:
      - name: springgreeting
        image: gcr.io/tech-rnd-project/springgreeting-v2:2.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        securityContext:
          runAsUser: 1000
---
