k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springgreeting
spec:
  ports:
  - port: 9090
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: springgreeting
