k8/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springgreeting-vsvc
  namespace: default
spec:
  hosts:
  - "springcicddemo.default.svc.cluster.local"
  gateways:
  - backend-gateway
  http:
  - name: primary
    route:
    - destination:
        host: springgreeting
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: springgreeting
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0
